# HomeProjects

./: .gitignore  CMakeLists.txt  README.md  Vector3.h
Primitive_Raymarching/: Camera.cpp  Camera.h  README.md
Project1_Basics/: CMakeLists.txt  Camera.cpp  Camera.h  README.md  Sphere.cpp  Sphere.h  Vector3.cpp  Vector3.h  main.cpp
UVS_Raymarching/: CMakeLists.txt  README.md
